package duke;

import javafx.application.Application;

public class launcher {
    public static void main(String[] args) {
        Application.launch(Duke.class, args);
    }
}
